首页面包屑  登录

--- a/src/style/index/index.css
+++ b/src/style/index/index.css
@@ -17,6 +17,31 @@
 [data-theme='dark'] .site-layout-content {
   background: #141414;
 }
+.layout_header {
+  background: #fff;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.layout_header .breadcrumb_box {
+  margin-left: 20px;
+  width: 1100px;
+}
+.layout_header .logout {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: absolute;
+  right: 120px;
+}
+.layout_header .logout .logout_icon {
+  font-size: 30px;
+}
+.layout_header .logout .logout_font {
+  font-size: 20px;
+  margin-left: 5px;
+}
 .admin_box {
   padding-left: 24px;
   height: 88px;
@@ -28,21 +53,7 @@
   margin-left: 24px;
   text-align: center;
 }
-.admin_box .admin .admin_status {
-  display: flex;
-  align-items: center;
-}
-.admin_box .admin .admin_status .cirlce {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #18bc9c;
-  margin-right: 5px;
-}
 .admin_box .admin .admin_name {
   font-weight: bold;
   font-size: 16px;
-}
-.breadcrumb_box {
-  margin-left: 20px;
 }
